Refactor entire architecture to strictly match paint_app_uml.txt specifications